# OctoPrint-BambuConnector

./: README.md  pyproject.toml
octoprint_bambu_connector/: __init__.py  connector.py
octoprint_bambu_connector/static/js/: bambu_connector.js
octoprint_bambu_connector/templates/: bambu_connector.jinja2  bambu_connector_settings.jinja2
